--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
+:root{
+    --font-family: "Roboto", sans-serif;
+
+}
+
+
 body{
     margin: 0;
-    height: 5000px;
+    height: 100%;
 }
 .container1{
     height: 800px;
@@ -40,7 +46,7 @@ body{
 .logo div:nth-of-type(1) span{
     font-weight: bolder;
     font-size: 20px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 }
 
 .logo div:nth-of-type(2) span{
@@ -53,7 +59,7 @@ body{
 
 .list ul li{
     display: inline;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     /* margin-right: 50px; */
     font-size: 12px;
 }
@@ -71,7 +77,7 @@ body{
     background-color: white;
     padding: 10px 15px;
     border-radius: 5px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -95,7 +101,7 @@ body{
 .innerdiv2 span{
     font-size: 15px;
     font-weight: 200;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     word-spacing: 2px;
     
 }
@@ -114,11 +120,11 @@ body{
 .innerdiv3 div:nth-of-type(1) span{
     font-size: 50px;
     font-weight: bold;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 }
 
 .innerdiv3 div:nth-of-type(2) span{
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 55px;
     font-weight: bold;
 }
@@ -148,7 +154,7 @@ body{
 }
 .innerdiv4 input::placeholder{
     color: white;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -167,7 +173,7 @@ body{
 }
 
 .innerdiv4 > div > div span{
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 12px;
     font-weight: 700;
     letter-spacing: 1px;
@@ -211,12 +217,12 @@ body{
 .innerdiv6 div:nth-of-type(1) span{
     font-size: 30px;
     font-weight: 700;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     letter-spacing: 1px;
 }
 
 .innerdiv6 div:nth-of-type(2) span{
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 1px;
@@ -266,7 +272,7 @@ body{
 .container3 > div:nth-of-type(1){
     font-size: 30px;
     font-weight: 600;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     margin-bottom: 15px;
     display: inline-block;
     word-spacing: 3px;
@@ -301,12 +307,12 @@ body{
 
 .container3 > div:nth-of-type(3) div p:nth-of-type(1){
     font-weight: 600;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 14px;
 }
 .container3 > div:nth-of-type(3) div p:nth-of-type(2){
     font-size: 13px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -380,14 +386,14 @@ body{
     font-size: 35px;
     line-height: 1.3;
     font-weight: 600;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     margin-bottom: 20px;
 
 }
 .container4 > div:nth-of-type(2) > div:nth-of-type(2){
     font-size: 17px;
     line-height: 1.3;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -431,7 +437,7 @@ body{
     padding: 5px 10px;
     font-size: 10px;
     font-weight: 600;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 .container5 > div .innerdiv8 > div:nth-of-type(2) {
@@ -440,7 +446,7 @@ body{
 .container5 > div .innerdiv8 > div:nth-of-type(2) span{
     color: white;
     display: block;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 30px;
     font-weight: 600;
 }
@@ -464,7 +470,7 @@ body{
 }
 .container5 > div .innerdiv8 > div:nth-of-type(3) div span{
     color: white;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 13px;
 }
 .container5 > div .innerdiv9{
@@ -539,7 +545,7 @@ body{
 
 .container6 > div .innerdiv9{
     font-size: 35px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-weight: 750;
     margin-bottom: 20px;
 }
@@ -547,7 +553,7 @@ body{
 .container6 > div .innerdiv10{
     font-size: 16px;
     color: #7F848D;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     margin-bottom: 50px;
 }
 
@@ -603,7 +609,7 @@ body{
 .starter > div > div:nth-of-type(2) > div:nth-of-type(1){
     color: #EDCB50;
     font-size: 12px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -616,21 +622,21 @@ body{
 .starter > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(1){
     font-weight: 600;    
     font-size: 15px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
 .starter > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(2){
     font-weight: 600;    
     font-size: 30px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
 .starter > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(3){
     font-weight: 500;    
     font-size: 10px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     color: rgb(91, 88, 88);
     font-style: italic;
 }
@@ -666,7 +672,7 @@ body{
 
 .starter > div:nth-of-type(3) div span{
    font-size: 11px;
-   font-family: "Roboto", sans-serif;
+   font-family: var(--font-family);
 
 }
 
@@ -730,7 +736,7 @@ body{
 .business > div > div:nth-of-type(2) > div:nth-of-type(1){
     color: #1681FE;
     font-size: 12px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -743,21 +749,21 @@ body{
 .business > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(1){
     font-weight: 600;    
     font-size: 15px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
 .business > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(2){
     font-weight: 600;    
     font-size: 30px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
 .business > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(3){
     font-weight: 500;    
     font-size: 10px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     color: rgb(91, 88, 88);
     font-style: italic;
 }
@@ -765,7 +771,7 @@ body{
 .business > div:nth-of-type(1) div:nth-of-type(3){
     align-self: flex-start;
     background-color: #1681FE;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 9px;
@@ -802,7 +808,7 @@ body{
 
 .business > div:nth-of-type(3) div span{
    font-size: 11px;
-   font-family: "Roboto", sans-serif;
+   font-family: var(--font-family);
 
 }
 
@@ -861,7 +867,7 @@ body{
 .premium > div > div:nth-of-type(2) > div:nth-of-type(1){
     color: #448C74;
     font-size: 12px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
@@ -874,21 +880,21 @@ body{
 .premium > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(1){
     font-weight: 600;    
     font-size: 15px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
 .premium > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(2){
     font-weight: 600;    
     font-size: 30px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 
 .premium > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(3){
     font-weight: 500;    
     font-size: 10px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     color: rgb(91, 88, 88);
     font-style: italic;
 }
@@ -896,7 +902,7 @@ body{
 .premium > div:nth-of-type(1) div:nth-of-type(3){
     align-self: flex-start;
     background-color: #448C74;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 9px;
@@ -933,7 +939,7 @@ body{
 
 .premium > div:nth-of-type(3) div span{
    font-size: 11px;
-   font-family: "Roboto", sans-serif;
+   font-family: var(--font-family);
 
 }
 
@@ -975,7 +981,7 @@ body{
 
 .container7 > div .innerdiv12{
     font-size: 35px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-weight: 750;
     margin-bottom: 20px;
 }
@@ -983,7 +989,7 @@ body{
 .container7 > div .innerdiv13{
     font-size: 16px;
     color: #7F848D;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     margin-bottom: 50px;
 }
 
@@ -1024,7 +1030,7 @@ body{
     align-items: center;
     background-color: #F0F9FF;
     border-radius: 20px;
-    width: 70%;
+    width: 75%;
     height: 100%;
     gap: 30px;
     /* border: 2px solid purple; */
@@ -1055,7 +1061,7 @@ body{
 
 .name{
     font-weight: 700;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 14px;
     margin-bottom: 15px;
 }
@@ -1063,7 +1069,7 @@ body{
 .title{
     font-size: 10px;
     font-weight: 400;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     margin-bottom: 15px;
     color: #7F848D;
 
@@ -1082,7 +1088,7 @@ body{
     font-size: 13px;
     /* border: 2px solid red; */
     word-break: keep-all;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-style: italic;
     line-height: 1.4;
 
@@ -1138,15 +1144,16 @@ body{
 }
 
 .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(1){
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-weight: 700;
     font-size: 35px;
     margin-bottom: 20px;
 }
 .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(2){
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
     font-size: 15px;
     margin-bottom: 30px;
+
 }
 .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(1) span , .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(2) span{
     display: block;
@@ -1165,7 +1172,7 @@ body{
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 
 }
 .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(3) img{
@@ -1208,5 +1215,123 @@ body{
 }
 
 .container10{
-    border: 2px solid red;
+    /* border: 2px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container10 > div:nth-of-type(1){
+    width: 65%;
+    height: 120px;
+    /* border: 2px solid red; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-bottom: 20px;
+
+
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1){
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /* border: 2px solid red; */
+    height: 100%;
+
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(1){
+    margin-bottom: 20px;
+    /* border: 2px solid red; */
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(1)> div:nth-of-type(1){
+    background-color: #0D1728;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(1)> div:nth-of-type(1) img{
+    height: 15px;
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(1)> div:nth-of-type(2){
+    color: #0D1728;
+    font-style: italic;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: var(--font-family);
+    letter-spacing: 1px;
+
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(2){
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(2) span{
+    display: block;
+    font-family: var(--font-family);
+    font-size: 12px;
+    color: #7F848D;
+    
+
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(1)> div:nth-of-type(3){
+    font-family: var(--font-family);
+    font-size: 10px;
+    font-weight: 550;
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(2), .container10 > div:nth-of-type(1) > div:nth-of-type(3){
+    font-family: var(--font-family);
+    font-size: 11px;
+    color: #7F848D;
+
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(2) ul, .container10 > div:nth-of-type(1) > div:nth-of-type(3) ul{
+    line-height: 1.8;
+    margin: 0;
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(4){
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.container10 > div:nth-of-type(1) > div:nth-of-type(4) > div:nth-of-type(1){
+    font-family: var(--font-family);
+    font-size: 10px;
+    font-weight: 800;
+}
+.container10 > div:nth-of-type(1) > div:nth-of-type(4) > div:nth-of-type(2) div{
+    background-color: #EAEBEC;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 25px;
+    width: 25px;
+    border-radius: 5px;
+}
+.container10 > div:nth-of-type(1) > div:nth-of-type(4) > div:nth-of-type(2){
+    display: flex;
+    gap: 10px;
+
+}
+
+.container10 > div:nth-of-type(1) > div:nth-of-type(4) > div:nth-of-type(2) div img{
+    height: 15px;
 }
