--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 :root{
-    --font-family: "Roboto", sans-serif;
-
+    --font-family: "Anybody", sans-serif;
 }
 
 
 body{
     margin: 0;
     height: 100%;
+    font-family: var(--font-family);
+
 }
 .container1{
     height: 800px;
@@ -56,7 +57,6 @@ body{
     font-style: italic;
 }
 
-
 .list ul li{
     display: inline;
     font-family: var(--font-family);
@@ -87,7 +87,7 @@ body{
 }
 
 .trial span:nth-of-type(1){
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .trial img{
@@ -105,7 +105,6 @@ body{
 
 .innerdiv2 span{
     font-size: 15px;
-    font-weight: 200;
     font-family: var(--font-family);
     word-spacing: 2px;
     color: #7F848D;
@@ -124,17 +123,13 @@ body{
     margin-bottom: -10px;
 }
 
-.innerdiv3 div:nth-of-type(1) span{
+.innerdiv3  span{
     font-size: 50px;
     font-weight: bold;
     font-family: var(--font-family);
+    line-height: 1.3;
 }
 
-.innerdiv3 div:nth-of-type(2) span{
-    font-family: var(--font-family);
-    font-size: 55px;
-    font-weight: bold;
-}
 .innerdiv4{
     display: flex;
     align-items: center;
@@ -160,7 +155,7 @@ body{
     color: white;
 }
 .innerdiv4 input::placeholder{
-    color: white;
+    color: #7F848D;
     font-family: var(--font-family);
 
 }
@@ -181,9 +176,9 @@ body{
 
 .innerdiv4 > div > div span{
     font-family: var(--font-family);
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 700;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
 }
 
 .innerdiv5{
@@ -260,7 +255,9 @@ body{
 
 .review div:nth-of-type(2){
     line-height: 1.5;
-    font-size: 14px;
+    align-items: center;
+    font-family: var(--font-family);
+    font-size: 12px;
 }
 .review div:nth-of-type(3) img{
     width: 80px;
@@ -285,9 +282,11 @@ body{
     word-spacing: 3px;
 }
 .container3 > div:nth-of-type(2){
-    font-weight: 400;
     margin-bottom: 70px;
-    word-spacing: 2px;
+    color: #7F848D;
+    font-family: var(--font-family);
+
+
 }
 .container3 > div:nth-of-type(3){
     display: flex;
@@ -313,13 +312,16 @@ body{
 }
 
 .container3 > div:nth-of-type(3) div p:nth-of-type(1){
-    font-weight: 600;
+    font-weight: 500;
     font-family: var(--font-family);
     font-size: 14px;
 }
 .container3 > div:nth-of-type(3) div p:nth-of-type(2){
     font-size: 13px;
     font-family: var(--font-family);
+    font-weight: 300;
+    color: #D4D6D9;
+
 
 }
 
@@ -348,6 +350,8 @@ body{
     background-color: #1E2746;
     margin-bottom: 20px;
     border-radius: 10px;
+    font-family: var(--font-family);
+
 
 
 }
@@ -358,6 +362,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
     gap: 15px;
 
 }
@@ -398,9 +403,10 @@ body{
 
 }
 .container4 > div:nth-of-type(2) > div:nth-of-type(2){
-    font-size: 17px;
+    font-size: 15px;
     line-height: 1.3;
     font-family: var(--font-family);
+    color: #7F848D;
 
 }
 
@@ -733,11 +739,10 @@ body{
     height: 60%;
 }
 
-.business > div > div:nth-of-type(2){
+.business > div:nth-of-type(1) > div:nth-of-type(2){
     display: flex;
     flex-direction: column;   
     justify-content: space-between; 
-    /* border: 2px solid red; */
     gap: 5px;
 }
 .business > div > div:nth-of-type(2) > div:nth-of-type(1){
@@ -750,12 +755,13 @@ body{
 .business > div > div:nth-of-type(2) > div:nth-of-type(2){
     display: flex;
     align-items: baseline;
-    gap: 5px;
+    gap: 1px;
+
 }
 
 .business > div > div:nth-of-type(2) > div:nth-of-type(2) span:nth-of-type(1){
     font-weight: 600;    
-    font-size: 15px;
+    font-size: 12px;
     font-family: var(--font-family);
 
 }
