--- a/index.css
+++ b/index.css
@@ -362,7 +362,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+
     gap: 15px;
 
 }
@@ -1163,9 +1163,12 @@ body{
     margin-bottom: 20px;
 }
 .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(2){
+    line-height: 1.4;
     font-family: var(--font-family);
-    font-size: 15px;
+    font-size: 14px;
     margin-bottom: 30px;
+    font-weight: 300;
+
 
 }
 .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(1) span , .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(2) span{
