--- a/index.css
+++ b/index.css
@@ -312,12 +312,14 @@ body{
 }
 
 .container3 > div:nth-of-type(3) div p:nth-of-type(1){
+    line-height: 1.5;
     font-weight: 500;
     font-family: var(--font-family);
-    font-size: 14px;
+    font-size: 13px;
 }
 .container3 > div:nth-of-type(3) div p:nth-of-type(2){
     font-size: 13px;
+    line-height: 1.2;
     font-family: var(--font-family);
     font-weight: 300;
     color: #D4D6D9;
