--- a/index.css
+++ b/index.css
@@ -1392,7 +1392,7 @@ body{
         box-sizing: border-box;
     } */
     body{
-        width: 103%;
+        width: 109%;
         padding: 0;
         margin: 0;
         height: fit-content;
@@ -1663,6 +1663,13 @@ body{
     }
     .container8 > div:nth-of-type(1) .innerdiv15{
         display: none;
+    }
+    .container8 > div:nth-of-type(1) .innerdiv14{
+        padding-left: 10px;
+    }
+    .container8 > div:nth-of-type(1) .innerdiv14 div:nth-of-type(3){
+        align-self: center;
+
     }
     .container10 > div:nth-of-type(1){
         flex-direction: column;
